Spellcheck character sheet fields

--- a/src/app/content/joueur/personnages/fiche/fiche.component.html
+++ b/src/app/content/joueur/personnages/fiche/fiche.component.html
@@ -254,7 +254,7 @@
 
 				</div>
 
-				<!--Résistances & Immunitées-->
+				<!--Résistances & Immunités-->
 				<div class="row">
 					<div class="col-6">
 						<mat-card-title>
@@ -271,7 +271,7 @@
 					</div>
 					<div class="col-6">
 						<mat-card-title>
-							<strong>Immunitée(s)</strong>
+							<strong>Immunité(s)</strong>
 						</mat-card-title>
 						<mat-card-content>
 							<ng-template ngFor [ngForOf]="personnage.immunites" let-immunite>
@@ -287,7 +287,7 @@
 				<div *ngIf="personnage.capaciteSpeciales && personnage.capaciteSpeciales.length > 0" class="row">
 					<div class="col-12">
 						<mat-card-title>
-							<strong>Capacitée(s) Spéciale(s)</strong>
+							<strong>Capacité(s) Spéciale(s)</strong>
 						</mat-card-title>
 						<mat-card-content>
 							<ng-template ngFor [ngForOf]="personnage.capaciteSpeciales" let-statistique>
