--- a/src/app/content/joueur/personnages/fiche/fiche.component.html
+++ b/src/app/content/joueur/personnages/fiche/fiche.component.html
@@ -62,7 +62,7 @@
 										<br />
 									</ng-template>
 
-									<!--Niveaux Effectif-->
+									<!--Niveau Effectif-->
 									<ng-template [ngIf]="personnage?.niveauEffectif">
 										<strong>Niveau Effectif: </strong>
 										<span [innerHtml]="personnage?.niveauEffectif"></span>
@@ -329,7 +329,7 @@
 				<div *ngIf="personnage.aptitudes && personnage.aptitudes.length > 0" class="row mb-1">
 					<div class="col">
 						<mat-card-title>
-							<strong>Aptitude(s) Spéciale</strong>
+							<strong>Aptitude(s) Spéciale(s)</strong>
 						</mat-card-title>
 						<mat-card-content>
 
@@ -378,7 +378,7 @@
 				<div *ngIf="personnage.race && personnage.race.sortsRacial && personnage.race.sortsRacial.length > 0" class="row mb-1">
 					<div class="col">
 						<mat-card-title>
-							<strong>Sort(s) Racial</strong>
+							<strong>Sort(s) Racial(aux)</strong>
 						</mat-card-title>
 						<mat-card-content>
 
