Fix typo in comment

--- a/src/app/content/joueur/personnages/fiche/fiche.component.html
+++ b/src/app/content/joueur/personnages/fiche/fiche.component.html
@@ -283,7 +283,7 @@
 					</div>
 				</div>
 
-				<!--Capacitée(s) Spéciale(s)-->
+				<!--Capacité(s) Spéciale(s)-->
 				<div *ngIf="personnage.capaciteSpeciales && personnage.capaciteSpeciales.length > 0" class="row">
 					<div class="col-12">
 						<mat-card-title>
