Updated angular to 9 and minor changes to alignements

--- a/src/app/content/organisateur/alignements/list/list.component.html
+++ b/src/app/content/organisateur/alignements/list/list.component.html
@@ -9,8 +9,8 @@
 <div class="container mt-4">
   <mat-card class="mb-4">
     <div>
-      <button mat-raised-button color="primary" class="mb-4" routerLink="/organisateur/alignements/form" disabled>Ajouter
-        Alignement</button>
+      <button mat-raised-button color="primary" class="mb-4" routerLink="/organisateur/alignements/form"
+        disabled>Ajouter Alignement</button>
     </div>
     <div class="table-responsive">
       <table class="table">
