Converting Observable to Promises, lots of work, still in progress

--- a/src/app/content/organisateur/dieux/list/list.component.html
+++ b/src/app/content/organisateur/dieux/list/list.component.html
@@ -21,7 +21,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let dieu of dieux | async">
+          <tr *ngFor="let dieu of dieux">
             <td [innerHtml]="dieu.nom"></td>
             <td>
               <div class="button-row">
