--- a/src/app/content/organisateur/portes/list/list.component.html
+++ b/src/app/content/organisateur/portes/list/list.component.html
@@ -24,7 +24,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let porte of portes | async">
+          <tr *ngFor="let porte of portes">
             <td [innerHtml]="porte.nom"></td>
             <td>
               <div class="button-row">
