--- a/src/app/content/organisateur/zones/list/list.component.html
+++ b/src/app/content/organisateur/zones/list/list.component.html
@@ -37,7 +37,7 @@
                 <button mat-icon-button [routerLink]="'/organisateur/zones/form/' + zone.id">
                   <mat-icon aria-label="Edit">edit</mat-icon>
                 </button>
-                <button mat-icon-button (click)="confirmDelete(zone)">
+                <button mat-icon-button (click)="confirm(zone)">
                   <mat-icon aria-label="Delete">delete</mat-icon>
                 </button>
               </div>
