Observables to Promises Part 2

--- a/src/app/content/organisateur/durees/list/list.component.html
+++ b/src/app/content/organisateur/durees/list/list.component.html
@@ -24,7 +24,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let duree of durees | async">
+          <tr *ngFor="let duree of durees">
             <td [innerHtml]="duree.nom"></td>
             <td>
               <div class="button-row">
