--- a/src/app/content/organisateur/ecoles/list/list.component.html
+++ b/src/app/content/organisateur/ecoles/list/list.component.html
@@ -21,7 +21,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let ecole of ecoles | async">
+          <tr *ngFor="let ecole of ecoles">
             <td [innerHtml]="ecole.nom"></td>
             <td>
               <div class="button-row">
