--- a/src/app/content/organisateur/immunites/list/list.component.html
+++ b/src/app/content/organisateur/immunites/list/list.component.html
@@ -21,7 +21,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let immunite of immunites | async">
+          <tr *ngFor="let immunite of immunites">
             <td [innerHtml]="immunite.nom"></td>
             <td>
               <div class="button-row">
