--- a/src/app/content/organisateur/resistances/list/list.component.html
+++ b/src/app/content/organisateur/resistances/list/list.component.html
@@ -21,7 +21,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let resistance of resistances | async">
+          <tr *ngFor="let resistance of resistances">
             <td [innerHtml]="resistance.nom"></td>
             <td>
               <div class="button-row">
