--- a/src/app/content/organisateur/statistiques/list/list.component.html
+++ b/src/app/content/organisateur/statistiques/list/list.component.html
@@ -21,7 +21,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let statistique of statistiques | async">
+          <tr *ngFor="let statistique of statistiques">
             <td [innerHtml]="statistique.nom"></td>
             <td>
               <div class="button-row">
