--- a/src/app/content/organisateur/zones/list/list.component.html
+++ b/src/app/content/organisateur/zones/list/list.component.html
@@ -27,7 +27,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let zone of zones | async">
+          <tr *ngFor="let zone of zones">
             <td [innerHtml]="zone.nom"></td>
             <td>
               <div class="button-row">
