Observables to Promises Part 3

--- a/src/app/content/organisateur/ordres/list/list.component.html
+++ b/src/app/content/organisateur/ordres/list/list.component.html
@@ -21,7 +21,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let ordre of ordres | async">
+          <tr *ngFor="let ordre of ordres">
             <td [innerHtml]="ordre.nom"></td>
             <td>
               <div class="button-row">
