Observables to Promises part 4

--- a/src/app/content/joueur/personnages/creation-progression/classes/classes.component.html
+++ b/src/app/content/joueur/personnages/creation-progression/classes/classes.component.html
@@ -24,7 +24,7 @@
 
 	<!--Stepper Buttons-->
 	<div class="col-12">
-		<button mat-raised-button color="primary" (click)="next()" [disabled]="!isCompleted()">Suivant</button>
+		<button mat-raised-button color="primary" (click)="next()" [disabled]="!isCompleted">Suivant</button>
 	</div>
 
 </div>
