--- a/src/app/content/joueur/personnages/creation-progression/sorts-domaine/sorts-domaine.component.html
+++ b/src/app/content/joueur/personnages/creation-progression/sorts-domaine/sorts-domaine.component.html
@@ -6,7 +6,7 @@
 
 	<!--Stepper Buttons-->
 	<div class="col-12">
-		<button mat-raised-button color="primary" (click)="next()" [disabled]="!isCompleted()">Suivant</button>
+		<button mat-raised-button color="primary" (click)="next()" [disabled]="!isCompleted">Suivant</button>
 	</div>
 
 </div>
