--- a/src/app/content/defaults/home/home.component.html
+++ b/src/app/content/defaults/home/home.component.html
@@ -1,94 +1,101 @@
 <div class="container-fluid">
-    <div class="row">
-        <header class="col-12 py-5 text-center">
-            <img class="img-fluid logo" src="/assets/img/logo.png" alt="Mythall" />
-        </header>
-    </div>
+  <div class="row">
+    <header class="col-12 py-5 text-center">
+      <img class="img-fluid logo" src="/assets/img/logo.png" alt="Mythall" />
+    </header>
+  </div>
 </div>
 
 <div class="container">
-    <div class="container mt-4">
-
-        <div class="row mb-2">
-            <mat-card>
-                <mat-card-title>Mise à jour v7.1.1</mat-card-title>
-                <mat-card-content>
-                    <div>
-
-                        <span>
-                            Les pages Aptitudes, Classes de Prestige, Dons et Sorts ont été ajoutés dans la section
-                            système de jeu. Plusieurs bugs ont été corrigé dans le générateur et il y a maintenant une
-                            note de clarification lors de l'enregistrement ou la connexion à votre compte.
-                            Les personnages n'ayant pas encore été attribué verront maintenant "Mythall" sur leur fiche
-                            et non "Dominik Giroux" comme nom à jouer. La section "demande de niveaux" a été rerité
-                            comme elle n'était plus nécessaire et créait de la confusion.
-                        </span>
-                        <br />
-
-                    </div>
-                </mat-card-content>
-            </mat-card>
-        </div>
-
-        <div class="row mb-2">
-            <mat-card>
-                <mat-card-title>Mise à jour v7.1.0</mat-card-title>
-                <mat-card-content>
-                    <div>
-
-                        <span class="font-weight-bold">La création de personnage est maintenant disponible.</span>
-                        <br />
-                        <br />
-
-                        <span>Il reste encore quelques ajustements à faire pour rendre la progression disponible à
-                            tous, mais vous êtes maintenant en mesure de crée vos propres personnages. Prendre note que
-                            le mode "Hardcore" n'est pas encore disponible, mais vous pouvez en faire la demande à
-                            l'accueil.</span>
-                        <br />
-
-                    </div>
-                </mat-card-content>
-            </mat-card>
-        </div>
-
-        <div class="row">
-            <mat-card>
-                <mat-card-title>Générateur Bêta v7.0.0</mat-card-title>
-                <mat-card-content>
-                    <div>
-
-                        <span>Bienvenue sur la version bêta du nouveau générateur. </span>
-                        <br />
-
-                        <span>Vous pouvez maintenant créé un compte via Facebook ou Google en cliquant sur l'icône
-                            d'utilisateur
-                            en haut à droite. </span>
-                        <br />
-
-                        <span>Un coup votre compte crée, vous pourrez réclamer les niveaux de vos anciens personnages
-                            via votre
-                            profil.
-                        </span>
-                        <br />
-
-                        <span>Veuilliez prendre note que les personnages de l'ancien générateur ne sont pas à jour et
-                            nous ferons
-                            les ajustements de niveaux nécessaires.</span>
-                        <br />
-
-                        <span>Un animateur approuvera vos demandes et vous aurez ensuite accès à redistribuer vos
-                            niveaux sur vos
-                            personnages lorsque les outils de création et progression seront disponibles.</span>
-                        <br />
-                        <br />
-
-                        <span>Merci de votre patience et sachez que l'équipe travaille fort pour que le tout soit
-                            disponible le
-                            plus rapidement possible.</span>
-
-                    </div>
-                </mat-card-content>
-            </mat-card>
-        </div>
+  <div class="container mt-4">
+    <div class="row mb-2">
+      <mat-card>
+        <mat-card-title>Mise à jour v7.1.1</mat-card-title>
+        <mat-card-content>
+          <div>
+            <span>
+              Les pages Aptitudes, Classes de Prestige, Dons et Sorts ont été
+              ajoutés dans la section système de jeu. Plusieurs bugs ont été
+              corrigé dans le générateur et il y a maintenant une note de
+              clarification lors de l'enregistrement ou la connexion à votre
+              compte. Les personnages n'ayant pas encore été attribué verront
+              maintenant "Mythall" sur leur fiche et non "Elyse Giroux" comme
+              nom à jouer. La section "demande de niveaux" a été rerité comme
+              elle n'était plus nécessaire et créait de la confusion.
+            </span>
+            <br />
+          </div>
+        </mat-card-content>
+      </mat-card>
     </div>
+
+    <div class="row mb-2">
+      <mat-card>
+        <mat-card-title>Mise à jour v7.1.0</mat-card-title>
+        <mat-card-content>
+          <div>
+            <span class="font-weight-bold"
+              >La création de personnage est maintenant disponible.</span
+            >
+            <br />
+            <br />
+
+            <span
+              >Il reste encore quelques ajustements à faire pour rendre la
+              progression disponible à tous, mais vous êtes maintenant en mesure
+              de crée vos propres personnages. Prendre note que le mode
+              "Hardcore" n'est pas encore disponible, mais vous pouvez en faire
+              la demande à l'accueil.</span
+            >
+            <br />
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div class="row">
+      <mat-card>
+        <mat-card-title>Générateur Bêta v7.0.0</mat-card-title>
+        <mat-card-content>
+          <div>
+            <span>Bienvenue sur la version bêta du nouveau générateur. </span>
+            <br />
+
+            <span
+              >Vous pouvez maintenant créé un compte via Facebook ou Google en
+              cliquant sur l'icône d'utilisateur en haut à droite.
+            </span>
+            <br />
+
+            <span
+              >Un coup votre compte crée, vous pourrez réclamer les niveaux de
+              vos anciens personnages via votre profil.
+            </span>
+            <br />
+
+            <span
+              >Veuilliez prendre note que les personnages de l'ancien générateur
+              ne sont pas à jour et nous ferons les ajustements de niveaux
+              nécessaires.</span
+            >
+            <br />
+
+            <span
+              >Un animateur approuvera vos demandes et vous aurez ensuite accès
+              à redistribuer vos niveaux sur vos personnages lorsque les outils
+              de création et progression seront disponibles.</span
+            >
+            <br />
+            <br />
+
+            <span
+              >Merci de votre patience et sachez que l'équipe travaille fort
+              pour que le tout soit disponible le plus rapidement
+              possible.</span
+            >
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
 </div>
